--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "react-native-animated-circular-progress",
-    "version": "1.0.0",
+    "version": "1.0.2",
     "description": "Animated circular progress components for React Native project, with all pure React Native API",
     "main": "index.js",
     "scripts": {
@@ -18,7 +18,9 @@
         "android",
         "ui",
         "animated",
-        "circular-progress"
+        "circular-progress",
+        "progress",
+        "circle"
     ],
     "author": "hinodi",
     "license": "MIT",
